--- a/Project 2/wrangle_act2 copy.ipynb
+++ b/Project 2/wrangle_act2 copy.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -187,153 +187,183 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>672482722825261057</td>\n",
-       "      <td>https://pbs.twimg.com/media/CVUjd14W4AE8tvO.jpg</td>\n",
+       "      <th>782</th>\n",
+       "      <td>690005060500217858</td>\n",
+       "      <td>https://pbs.twimg.com/media/CZNj8N-WQAMXASZ.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>West_Highland_white_terrier</td>\n",
-       "      <td>0.586173</td>\n",
-       "      <td>True</td>\n",
-       "      <td>borzoi</td>\n",
-       "      <td>0.206620</td>\n",
+       "      <td>Samoyed</td>\n",
+       "      <td>0.270287</td>\n",
        "      <td>True</td>\n",
        "      <td>Great_Pyrenees</td>\n",
-       "      <td>0.060653</td>\n",
+       "      <td>0.114027</td>\n",
        "      <td>True</td>\n",
+       "      <td>teddy</td>\n",
+       "      <td>0.072475</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>533</th>\n",
-       "      <td>676897532954456065</td>\n",
-       "      <td>https://pbs.twimg.com/media/CWTSt0UW4AALMNB.jpg</td>\n",
+       "      <th>56</th>\n",
+       "      <td>667065535570550784</td>\n",
+       "      <td>https://pbs.twimg.com/media/CUHkkJpXIAA2w3n.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>hamster</td>\n",
-       "      <td>0.628255</td>\n",
+       "      <td>jigsaw_puzzle</td>\n",
+       "      <td>0.560001</td>\n",
        "      <td>False</td>\n",
-       "      <td>guinea_pig</td>\n",
-       "      <td>0.318646</td>\n",
+       "      <td>doormat</td>\n",
+       "      <td>0.103259</td>\n",
        "      <td>False</td>\n",
-       "      <td>macaque</td>\n",
-       "      <td>0.013058</td>\n",
+       "      <td>space_heater</td>\n",
+       "      <td>0.042568</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1013</th>\n",
-       "      <td>709556954897764353</td>\n",
-       "      <td>https://pbs.twimg.com/media/CdjaSFCWAAAJZh3.jpg</td>\n",
-       "      <td>2</td>\n",
-       "      <td>golden_retriever</td>\n",
-       "      <td>0.790026</td>\n",
-       "      <td>True</td>\n",
-       "      <td>kuvasz</td>\n",
-       "      <td>0.105031</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Labrador_retriever</td>\n",
-       "      <td>0.087051</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1817</th>\n",
-       "      <td>834086379323871233</td>\n",
-       "      <td>https://pbs.twimg.com/media/C5NFIsjWQAEI93t.jpg</td>\n",
+       "      <th>464</th>\n",
+       "      <td>675003128568291329</td>\n",
+       "      <td>https://pbs.twimg.com/media/CV4XwYiWoAAHQIF.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>bath_towel</td>\n",
-       "      <td>0.736759</td>\n",
-       "      <td>False</td>\n",
-       "      <td>sleeping_bag</td>\n",
-       "      <td>0.062959</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Labrador_retriever</td>\n",
-       "      <td>0.045263</td>\n",
+       "      <td>Pembroke</td>\n",
+       "      <td>0.655279</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Pomeranian</td>\n",
+       "      <td>0.104164</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Cardigan</td>\n",
+       "      <td>0.052818</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1753</th>\n",
-       "      <td>824663926340194305</td>\n",
-       "      <td>https://pbs.twimg.com/media/C3HLd0HXUAAUI2b.jpg</td>\n",
+       "      <th>1788</th>\n",
+       "      <td>829861396166877184</td>\n",
+       "      <td>https://pbs.twimg.com/media/C4RCiIHWYAAwgJM.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>English_setter</td>\n",
-       "      <td>0.526488</td>\n",
+       "      <td>Border_terrier</td>\n",
+       "      <td>0.394486</td>\n",
        "      <td>True</td>\n",
-       "      <td>golden_retriever</td>\n",
-       "      <td>0.402815</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Irish_setter</td>\n",
-       "      <td>0.034418</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>484</th>\n",
-       "      <td>675483430902214656</td>\n",
-       "      <td>https://pbs.twimg.com/media/CV_MmGZU8AAggM6.jpg</td>\n",
-       "      <td>1</td>\n",
-       "      <td>box_turtle</td>\n",
-       "      <td>0.543706</td>\n",
-       "      <td>False</td>\n",
-       "      <td>terrapin</td>\n",
-       "      <td>0.202600</td>\n",
-       "      <td>False</td>\n",
-       "      <td>loggerhead</td>\n",
-       "      <td>0.071122</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>545</th>\n",
-       "      <td>677314812125323265</td>\n",
-       "      <td>https://pbs.twimg.com/media/CWZOOIUW4AAQrX_.jpg</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Blenheim_spaniel</td>\n",
-       "      <td>0.924127</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Japanese_spaniel</td>\n",
-       "      <td>0.054790</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Chihuahua</td>\n",
-       "      <td>0.008204</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1354</th>\n",
-       "      <td>760252756032651264</td>\n",
-       "      <td>https://pbs.twimg.com/media/Coz12OLWgAADdys.jpg</td>\n",
-       "      <td>1</td>\n",
-       "      <td>radio_telescope</td>\n",
-       "      <td>0.155279</td>\n",
-       "      <td>False</td>\n",
-       "      <td>dam</td>\n",
-       "      <td>0.154515</td>\n",
-       "      <td>False</td>\n",
-       "      <td>crane</td>\n",
-       "      <td>0.098040</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1193</th>\n",
-       "      <td>740214038584557568</td>\n",
-       "      <td>https://pbs.twimg.com/media/CkXEu2OUoAAs8yU.jpg</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Chesapeake_Bay_retriever</td>\n",
-       "      <td>0.586414</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Labrador_retriever</td>\n",
-       "      <td>0.189782</td>\n",
-       "      <td>True</td>\n",
-       "      <td>vizsla</td>\n",
-       "      <td>0.067607</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>574</th>\n",
-       "      <td>678446151570427904</td>\n",
-       "      <td>https://pbs.twimg.com/media/CWpTLOYWsAEDhcU.jpg</td>\n",
-       "      <td>1</td>\n",
        "      <td>Staffordshire_bullterrier</td>\n",
-       "      <td>0.284492</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Rottweiler</td>\n",
-       "      <td>0.189434</td>\n",
+       "      <td>0.376574</td>\n",
        "      <td>True</td>\n",
        "      <td>American_Staffordshire_terrier</td>\n",
-       "      <td>0.189430</td>\n",
+       "      <td>0.031292</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1169</th>\n",
+       "      <td>736010884653420544</td>\n",
+       "      <td>https://pbs.twimg.com/media/CjbV-lEWgAAr6WY.jpg</td>\n",
+       "      <td>2</td>\n",
+       "      <td>golden_retriever</td>\n",
+       "      <td>0.553901</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Labrador_retriever</td>\n",
+       "      <td>0.119475</td>\n",
+       "      <td>True</td>\n",
+       "      <td>bluetick</td>\n",
+       "      <td>0.077475</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>670778058496974848</td>\n",
+       "      <td>https://pbs.twimg.com/media/CU8VFhuVAAAQW8B.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>pug</td>\n",
+       "      <td>0.776612</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Brabancon_griffon</td>\n",
+       "      <td>0.112032</td>\n",
+       "      <td>True</td>\n",
+       "      <td>boxer</td>\n",
+       "      <td>0.039051</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1871</th>\n",
+       "      <td>844973813909606400</td>\n",
+       "      <td>https://pbs.twimg.com/media/C7nzMwTV4AARz4t.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Labrador_retriever</td>\n",
+       "      <td>0.742421</td>\n",
+       "      <td>True</td>\n",
+       "      <td>golden_retriever</td>\n",
+       "      <td>0.195218</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Chihuahua</td>\n",
+       "      <td>0.017320</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>948</th>\n",
+       "      <td>704819833553219584</td>\n",
+       "      <td>https://pbs.twimg.com/media/CcgF5ovW8AACrEU.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>guinea_pig</td>\n",
+       "      <td>0.994776</td>\n",
+       "      <td>False</td>\n",
+       "      <td>hamster</td>\n",
+       "      <td>0.004069</td>\n",
+       "      <td>False</td>\n",
+       "      <td>wood_rabbit</td>\n",
+       "      <td>0.000206</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>947</th>\n",
+       "      <td>704761120771465216</td>\n",
+       "      <td>https://pbs.twimg.com/media/CcfQgHVWoAAxauy.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Siamese_cat</td>\n",
+       "      <td>0.202294</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Chihuahua</td>\n",
+       "      <td>0.100418</td>\n",
+       "      <td>True</td>\n",
+       "      <td>basenji</td>\n",
+       "      <td>0.072096</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>673686845050527744</td>\n",
+       "      <td>https://pbs.twimg.com/media/CVlqi_AXIAASlcD.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Pekinese</td>\n",
+       "      <td>0.185903</td>\n",
+       "      <td>True</td>\n",
+       "      <td>guinea_pig</td>\n",
+       "      <td>0.172951</td>\n",
+       "      <td>False</td>\n",
+       "      <td>pug</td>\n",
+       "      <td>0.166183</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1196</th>\n",
+       "      <td>740373189193256964</td>\n",
+       "      <td>https://pbs.twimg.com/media/CkZVdJ6WYAAXZ5A.jpg</td>\n",
+       "      <td>3</td>\n",
+       "      <td>golden_retriever</td>\n",
+       "      <td>0.807644</td>\n",
+       "      <td>True</td>\n",
+       "      <td>kuvasz</td>\n",
+       "      <td>0.101286</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Labrador_retriever</td>\n",
+       "      <td>0.023785</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>668221241640230912</td>\n",
+       "      <td>https://pbs.twimg.com/media/CUX_rAyWsAYZOQ5.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>chow</td>\n",
+       "      <td>0.395101</td>\n",
+       "      <td>True</td>\n",
+       "      <td>golden_retriever</td>\n",
+       "      <td>0.372115</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Labrador_retriever</td>\n",
+       "      <td>0.148785</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -342,52 +372,60 @@
       ],
       "text/plain": [
        "                tweet_id                                          jpg_url  \\\n",
-       "349   672482722825261057  https://pbs.twimg.com/media/CVUjd14W4AE8tvO.jpg   \n",
-       "533   676897532954456065  https://pbs.twimg.com/media/CWTSt0UW4AALMNB.jpg   \n",
-       "1013  709556954897764353  https://pbs.twimg.com/media/CdjaSFCWAAAJZh3.jpg   \n",
-       "1817  834086379323871233  https://pbs.twimg.com/media/C5NFIsjWQAEI93t.jpg   \n",
-       "1753  824663926340194305  https://pbs.twimg.com/media/C3HLd0HXUAAUI2b.jpg   \n",
-       "484   675483430902214656  https://pbs.twimg.com/media/CV_MmGZU8AAggM6.jpg   \n",
-       "545   677314812125323265  https://pbs.twimg.com/media/CWZOOIUW4AAQrX_.jpg   \n",
-       "1354  760252756032651264  https://pbs.twimg.com/media/Coz12OLWgAADdys.jpg   \n",
-       "1193  740214038584557568  https://pbs.twimg.com/media/CkXEu2OUoAAs8yU.jpg   \n",
-       "574   678446151570427904  https://pbs.twimg.com/media/CWpTLOYWsAEDhcU.jpg   \n",
+       "782   690005060500217858  https://pbs.twimg.com/media/CZNj8N-WQAMXASZ.jpg   \n",
+       "56    667065535570550784  https://pbs.twimg.com/media/CUHkkJpXIAA2w3n.jpg   \n",
+       "464   675003128568291329  https://pbs.twimg.com/media/CV4XwYiWoAAHQIF.jpg   \n",
+       "1788  829861396166877184  https://pbs.twimg.com/media/C4RCiIHWYAAwgJM.jpg   \n",
+       "1169  736010884653420544  https://pbs.twimg.com/media/CjbV-lEWgAAr6WY.jpg   \n",
+       "257   670778058496974848  https://pbs.twimg.com/media/CU8VFhuVAAAQW8B.jpg   \n",
+       "1871  844973813909606400  https://pbs.twimg.com/media/C7nzMwTV4AARz4t.jpg   \n",
+       "948   704819833553219584  https://pbs.twimg.com/media/CcgF5ovW8AACrEU.jpg   \n",
+       "947   704761120771465216  https://pbs.twimg.com/media/CcfQgHVWoAAxauy.jpg   \n",
+       "399   673686845050527744  https://pbs.twimg.com/media/CVlqi_AXIAASlcD.jpg   \n",
+       "1196  740373189193256964  https://pbs.twimg.com/media/CkZVdJ6WYAAXZ5A.jpg   \n",
+       "122   668221241640230912  https://pbs.twimg.com/media/CUX_rAyWsAYZOQ5.jpg   \n",
        "\n",
-       "      img_num                           p1   p1_conf  p1_dog  \\\n",
-       "349         1  West_Highland_white_terrier  0.586173    True   \n",
-       "533         1                      hamster  0.628255   False   \n",
-       "1013        2             golden_retriever  0.790026    True   \n",
-       "1817        1                   bath_towel  0.736759   False   \n",
-       "1753        1               English_setter  0.526488    True   \n",
-       "484         1                   box_turtle  0.543706   False   \n",
-       "545         2             Blenheim_spaniel  0.924127    True   \n",
-       "1354        1              radio_telescope  0.155279   False   \n",
-       "1193        1     Chesapeake_Bay_retriever  0.586414    True   \n",
-       "574         1    Staffordshire_bullterrier  0.284492    True   \n",
+       "      img_num                  p1   p1_conf  p1_dog  \\\n",
+       "782         1             Samoyed  0.270287    True   \n",
+       "56          1       jigsaw_puzzle  0.560001   False   \n",
+       "464         1            Pembroke  0.655279    True   \n",
+       "1788        1      Border_terrier  0.394486    True   \n",
+       "1169        2    golden_retriever  0.553901    True   \n",
+       "257         1                 pug  0.776612    True   \n",
+       "1871        1  Labrador_retriever  0.742421    True   \n",
+       "948         1          guinea_pig  0.994776   False   \n",
+       "947         1         Siamese_cat  0.202294   False   \n",
+       "399         1            Pekinese  0.185903    True   \n",
+       "1196        3    golden_retriever  0.807644    True   \n",
+       "122         1                chow  0.395101    True   \n",
        "\n",
-       "                      p2   p2_conf  p2_dog                              p3  \\\n",
-       "349               borzoi  0.206620    True                  Great_Pyrenees   \n",
-       "533           guinea_pig  0.318646   False                         macaque   \n",
-       "1013              kuvasz  0.105031    True              Labrador_retriever   \n",
-       "1817        sleeping_bag  0.062959   False              Labrador_retriever   \n",
-       "1753    golden_retriever  0.402815    True                    Irish_setter   \n",
-       "484             terrapin  0.202600   False                      loggerhead   \n",
-       "545     Japanese_spaniel  0.054790    True                       Chihuahua   \n",
-       "1354                 dam  0.154515   False                           crane   \n",
-       "1193  Labrador_retriever  0.189782    True                          vizsla   \n",
-       "574           Rottweiler  0.189434    True  American_Staffordshire_terrier   \n",
+       "                             p2   p2_conf  p2_dog  \\\n",
+       "782              Great_Pyrenees  0.114027    True   \n",
+       "56                      doormat  0.103259   False   \n",
+       "464                  Pomeranian  0.104164    True   \n",
+       "1788  Staffordshire_bullterrier  0.376574    True   \n",
+       "1169         Labrador_retriever  0.119475    True   \n",
+       "257           Brabancon_griffon  0.112032    True   \n",
+       "1871           golden_retriever  0.195218    True   \n",
+       "948                     hamster  0.004069   False   \n",
+       "947                   Chihuahua  0.100418    True   \n",
+       "399                  guinea_pig  0.172951   False   \n",
+       "1196                     kuvasz  0.101286    True   \n",
+       "122            golden_retriever  0.372115    True   \n",
        "\n",
-       "       p3_conf  p3_dog  \n",
-       "349   0.060653    True  \n",
-       "533   0.013058   False  \n",
-       "1013  0.087051    True  \n",
-       "1817  0.045263    True  \n",
-       "1753  0.034418    True  \n",
-       "484   0.071122   False  \n",
-       "545   0.008204    True  \n",
-       "1354  0.098040   False  \n",
-       "1193  0.067607    True  \n",
-       "574   0.189430    True  "
+       "                                  p3   p3_conf  p3_dog  \n",
+       "782                            teddy  0.072475   False  \n",
+       "56                      space_heater  0.042568   False  \n",
+       "464                         Cardigan  0.052818    True  \n",
+       "1788  American_Staffordshire_terrier  0.031292    True  \n",
+       "1169                        bluetick  0.077475    True  \n",
+       "257                            boxer  0.039051    True  \n",
+       "1871                       Chihuahua  0.017320    True  \n",
+       "948                      wood_rabbit  0.000206   False  \n",
+       "947                          basenji  0.072096    True  \n",
+       "399                              pug  0.166183    True  \n",
+       "1196              Labrador_retriever  0.023785    True  \n",
+       "122               Labrador_retriever  0.148785    True  "
       ]
      },
      "execution_count": 7,
@@ -396,7 +434,7 @@
     }
    ],
    "source": [
-    "image_pred_df.sample(10)"
+    "image_pred_df.sample(12)"
    ]
   },
   {
